--- a/sass/layouts/_client-section.scss
+++ b/sass/layouts/_client-section.scss
@@ -5,8 +5,12 @@
 */
 
 .client {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    
+
+    @include mq(desktop) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
 
 .client__title {
