--- a/sass/layouts/_benefits-section.scss
+++ b/sass/layouts/_benefits-section.scss
@@ -5,32 +5,76 @@
 */
 
 .benefits {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @include mq(desktop) {
+        padding-top: 94px;
+        padding-bottom: 94px; 
+    }
 }
 
 .benefits__list {
     list-style: none;
-    display: flex;
+    
 
     padding: 0;
     margin: 0;
+
+    @include mq(mobile) {
+        
+    }
+
+    @include mq(tablet) {
+        display: flex;
+        flex-wrap: wrap;
+
+        margin: -15px;
+    }
+
+    @include mq(desktop) {
+        
+        display: flex;
+
+    }
 }
 
 .benefits__item {
-    width: 270px;
+    width: 100%;
 
-    margin-right: 30px;
-
-    &:last-child {
-        margin-right: 0;
+    @include mq(mobile) {
+        
+        margin-bottom: 30px;
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
+
+    @include mq(tablet) {
+        flex-basis: calc(100% - 2 * 30px) / 2;
+        margin: 15px;
+    }
+    
+    
+    @include mq(desktop) {
+        flex-basis: 270px;
+
+        margin-right: 30px;
+        
+        &:last-child {
+            margin-right: 0;
+        }
+ 
+    }
+
+
 }
 
 
 .benefits__picture {
     display: flex;
-    width: 270px;
+    // width: 270px;
+    width: 100%;
     height: 120px;
 
     background-color: #F5F4FA;
@@ -43,6 +87,7 @@
 }
 
 .benefits__name {
+    text-align: center;
     color: var(--title-text-color);
 
     font-weight: var(--bold-font-weight);
@@ -52,6 +97,14 @@
     text-transform: uppercase;
 
     margin-bottom: 10px;
+
+    @include mq(tablet) {
+        text-align: left;
+    }
+
+    @include mq(desktop) {
+        text-align: left;
+    }
 }
 
 .benefits__text {
