--- a/sass/layouts/_work-section.scss
+++ b/sass/layouts/_work-section.scss
@@ -5,8 +5,14 @@ Work section BEM
 */
 
 .work {
-    padding-top: 0;
-    padding-bottom: 94px;
+    display: none;
+
+    @media screen and (min-width: 1200px) {
+        display: block;
+        padding-top: 0;
+        padding-bottom: 94px;
+    }
+    
 }
 
 .work__title {
