--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -21,11 +21,16 @@
     font-family: var(--primary-font-family);
     font-style: normal;
     font-weight: var(--black-font-weight);
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.62;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
 
     margin-bottom: 30px;
+
+    @include mq(desktop) {
+        font-size: 44px;
+        line-height: 1.36;
+    }
 }
