--- a/css/main.css
+++ b/css/main.css
@@ -37,17 +37,31 @@ body {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .section-title {
   color: var(--title-text-color);
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section-title {
+    font-size: 36px;
+    margin-bottom: 50px;
+  }
 }
 
 .section-list {
@@ -640,12 +654,19 @@ img {
   font-family: var(--primary-font-family);
   font-style: normal;
   font-weight: var(--black-font-weight);
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-title {
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 /* 
@@ -682,19 +703,11 @@ img {
   }
 }
 
-@media screen and (min-width: 1200px) {
-  .benefits__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
 .benefits__item {
   width: 100%;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767.98px) {
   .benefits__item {
     margin-bottom: 30px;
   }
@@ -705,20 +718,16 @@ img {
 
 @media screen and (min-width: 768px) {
   .benefits__item {
-    -ms-flex-preferred-size: calc(100% - 2 * 30px)/2;
-        flex-basis: calc(100% - 2 * 30px)/2;
+    -ms-flex-preferred-size: calc((100% - 2 * 30px) / 2);
+        flex-basis: calc((100% - 2 * 30px) / 2);
     margin: 15px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .benefits__item {
-    -ms-flex-preferred-size: 270px;
-        flex-basis: 270px;
-    margin-right: 30px;
-  }
-  .benefits__item:last-child {
-    margin-right: 0;
+    -ms-flex-preferred-size: calc((100% - 4 * 30px) / 4);
+        flex-basis: calc((100% - 4 * 30px) / 4);
   }
 }
 
@@ -740,7 +749,6 @@ img {
 }
 
 .benefits__name {
-  text-align: center;
   color: var(--title-text-color);
   font-weight: var(--bold-font-weight);
   font-size: 14px;
@@ -749,15 +757,9 @@ img {
   margin-bottom: 10px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 767.98px) {
   .benefits__name {
-    text-align: left;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .benefits__name {
-    text-align: left;
+    text-align: center;
   }
 }
 
@@ -869,18 +871,39 @@ Work section BEM
   background-color: #f5f4fa;
 }
 
+.section-list {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
 .team-item {
   background: #ffffff;
-  /* material shadow v1 */
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   text-align: center;
-  margin-right: 30px;
+  width: 450px;
+  margin-bottom: 30px;
 }
 
-.team-item:last-child {
-  margin-right: 0;
+@media screen and (min-width: 768px) {
+  .team-item {
+    width: 354px;
+    margin-right: 30px;
+  }
+  .team-item:nth-child(2n) {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-item {
+    width: 270px;
+    margin-right: 30px;
+  }
+  .team-item:last-child {
+    margin-right: 0;
+  }
 }
 
 /* 
@@ -888,6 +911,11 @@ Work section BEM
   client section BEM
   ==============  
 */
+.client {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
 @media screen and (min-width: 1200px) {
   .client {
     padding-top: 94px;
@@ -898,10 +926,17 @@ Work section BEM
 .client__title {
   color: var(--title-text-color);
   font-weight: var(--bold-font-weight);
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .client__title {
+    font-size: 36px;
+    margin-bottom: 50px;
+  }
 }
 
 .client__list {
@@ -913,8 +948,29 @@ Work section BEM
   margin: 0;
 }
 
-.client__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (max-width: 1199.98px) {
+  .client__list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
+.client__item {
+  margin: 15px;
+}
+
+@media screen and (min-width: 1200px) {
+  .client__item {
+    margin: 0;
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .client__item:last-child {
+    margin-right: 0;
+  }
 }
 
 .client__link {
@@ -927,13 +983,25 @@ Work section BEM
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 170px;
+  width: 210px;
   height: 92px;
   border: 1px solid #AFB1B8;
   border-radius: 4px;
   fill: #AFB1B8;
   -webkit-transition: border-color var(--transition), fill var(--transition);
   transition: border-color var(--transition), fill var(--transition);
+}
+
+@media screen and (min-width: 768px) {
+  .client__link {
+    width: 226px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .client__link {
+    width: 170px;
+  }
 }
 
 .client__link:hover, .client__link:focus {
