--- a/sass/base/_comon.scss
+++ b/sass/base/_comon.scss
@@ -9,18 +9,29 @@ body {
 
 
 .section {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @include mq(desktop) {
+        padding-top: 94px;
+        padding-bottom: 94px; 
+    }
 
     &-title {
         color: var(--title-text-color);
     
         font-weight: 700;
-        font-size: 36px;
+        font-size: 28px;
         line-height: 1.17;
         text-align: center;
     
-        margin-bottom: 50px;
+        margin-bottom: 30px;
+
+        @include mq(desktop) {
+            font-size: 36px;
+
+            margin-bottom: 50px;
+        }
     }
     
     &-list {
