--- a/sass/layouts/_benefits-section.scss
+++ b/sass/layouts/_benefits-section.scss
@@ -8,6 +8,7 @@
     padding-top: 60px;
     padding-bottom: 60px;
 
+
     @include mq(desktop) {
         padding-top: 94px;
         padding-bottom: 94px; 
@@ -21,28 +22,20 @@
     padding: 0;
     margin: 0;
 
-    @include mq(mobile) {
-        
-    }
-
     @include mq(tablet) {
         display: flex;
         flex-wrap: wrap;
 
         margin: -15px;
     }
-
-    @include mq(desktop) {
-        
-        display: flex;
-
-    }
 }
+
+    
 
 .benefits__item {
     width: 100%;
 
-    @include mq(mobile) {
+    @include mq(mobile-only) {
         
         margin-bottom: 30px;
         &:last-child {
@@ -51,21 +44,16 @@
     }
 
     @include mq(tablet) {
-        flex-basis: calc(100% - 2 * 30px) / 2;
+        flex-basis: calc((100% - 2 * 30px) / 2);
         margin: 15px;
     }
     
     
     @include mq(desktop) {
-        flex-basis: 270px;
-
-        margin-right: 30px;
-        
-        &:last-child {
-            margin-right: 0;
-        }
+        flex-basis: calc((100% - 4 * 30px) / 4);
  
     }
+        
 
 
 }
@@ -73,7 +61,7 @@
 
 .benefits__picture {
     display: flex;
-    // width: 270px;
+    
     width: 100%;
     height: 120px;
 
@@ -87,7 +75,6 @@
 }
 
 .benefits__name {
-    text-align: center;
     color: var(--title-text-color);
 
     font-weight: var(--bold-font-weight);
@@ -95,15 +82,11 @@
     line-height: 1.14;
 
     text-transform: uppercase;
-
+    
     margin-bottom: 10px;
 
-    @include mq(tablet) {
-        text-align: left;
-    }
-
-    @include mq(desktop) {
-        text-align: left;
+    @include mq(mobile-only) {
+        text-align: center;
     }
 }
 
@@ -111,3 +94,4 @@
     line-height: 1.71;
     letter-spacing: 0.03em;
 }
+
