--- a/sass/layouts/_team-section.scss
+++ b/sass/layouts/_team-section.scss
@@ -24,19 +24,42 @@
     background-color: #f5f4fa;
 }
 
+.section-list {
+    
+    flex-wrap: wrap;
+
+}
+
 .team-item {
     background: #ffffff;
-    /* material shadow v1 */
-
+    
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 
     text-align: center;
 
-    margin-right: 30px;
+    width: 450px;
 
-    &:last-child {
-        margin-right: 0;
+    margin-bottom: 30px;
+
+    @include mq(tablet) {
+        width: 354px;
+        // width: calc((100% - 2 * 30px) / 2);
+        margin-right: 30px;
+
+        &:nth-child(2n) {
+            margin-right: 0;
+        }
+    }
+
+    @include mq(desktop) {
+        width: 270px;
+        
+        margin-right: 30px;
+
+        &:last-child {
+            margin-right: 0;
+        }
     }
 }
