--- a/css/main.css
+++ b/css/main.css
@@ -392,6 +392,10 @@ img {
   margin-right: 10px;
 }
 
+.subscribe {
+  width: 100%;
+}
+
 .title-subscribe {
   display: block;
   color: var(--white-text);
@@ -412,11 +416,30 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-form {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
 }
 
 .form-place {
-  width: 358px;
+  width: 100%;
   padding-left: 16px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin-bottom: 20px;
   background-color: transparent;
   outline: none;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -432,10 +455,15 @@ img {
   color: var(--accent-color);
 }
 
+@media screen and (min-width: 1200px) {
+  .form-place {
+    width: 358px;
+  }
+}
+
 .btn-subscribe {
   width: 200px;
   height: 50px;
-  margin-left: 12px;
   cursor: pointer;
   background-color: var(--accent-color);
   display: -webkit-box;
@@ -460,6 +488,12 @@ img {
   margin-left: 10px;
   background-size: contain;
   background-image: url("../imeges/icon/svg/send-footer.svg");
+}
+
+@media screen and (min-width: 1200px) {
+  .btn-subscribe {
+    margin-left: 12px;
+  }
 }
 
 .filter-item {
@@ -515,7 +549,12 @@ img {
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
-  margin-right: 93px;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    margin-right: 93px;
+  }
 }
 
 .text-logo {
@@ -886,7 +925,7 @@ Work section BEM
   margin-bottom: 30px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .team-item {
     width: 354px;
     margin-right: 30px;
@@ -1022,14 +1061,33 @@ Work section BEM
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
 }
 
-.footer-container {
-  width: 231px;
-  margin-right: 70px;
+@media screen and (min-width: 1200px) {
+  .footer-box {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-container {
+    width: 231px;
+    margin-right: 70px;
+  }
 }
 
 .footer-container .logo {
@@ -1043,6 +1101,7 @@ Work section BEM
   font-style: normal;
   /* костиль розібратися */
   line-height: 21px;
+  margin-bottom: 60px;
 }
 
 .footer-address {
@@ -1076,7 +1135,13 @@ Work section BEM
 }
 
 .follow {
-  margin-right: 93px;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .follow {
+    margin-right: 93px;
+  }
 }
 
 .title-follow {
