--- a/sass/components/_subscribe-form.scss
+++ b/sass/components/_subscribe-form.scss
@@ -1,3 +1,8 @@
+.subscribe {
+    width: 100%;
+    
+}
+
 .title-subscribe {
     display: block;
     color: var(--white-text);
@@ -18,12 +23,21 @@
 
 .subscribe-form {
     display: flex;
+    flex-direction: column;
+    
+    align-items: center;
+
+    @include mq(desktop) {
+        flex-direction: row;
+    }
 }
 
 .form-place {
-    width: 358px;
-
+    width: 100%;
     padding-left: 16px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-bottom: 20px;
 
     background-color: transparent;
 
@@ -39,14 +53,17 @@
         border-color: var(--accent-color);
         color: var(--accent-color)
     }
+
+    @include mq(desktop) {
+        width: 358px;
+        
+    }
 }
 
 
 .btn-subscribe {
     width: 200px;
     height: 50px;
-
-    margin-left: 12px;
 
     cursor: pointer;
 
@@ -69,5 +86,9 @@
         margin-left: 10px;
         background-size: contain;
         background-image: url('../imeges/icon/svg/send-footer.svg');
+    }
+
+    @include mq(desktop) {
+        margin-left: 12px;
     }
 }
