--- a/sass/layouts/_team-section.scss
+++ b/sass/layouts/_team-section.scss
@@ -43,7 +43,7 @@
 
     margin-bottom: 30px;
 
-    @include mq(tablet) {
+    @include mq(tablet-only) {
         width: 354px;
         // width: calc((100% - 2 * 30px) / 2);
         margin-right: 30px;
