Закінчив футер для таблетки

--- a/sass/components/_subscribe-form.scss
+++ b/sass/components/_subscribe-form.scss
@@ -54,11 +54,15 @@
         color: var(--accent-color)
     }
 
+    @include mq(tablet) {
+        width: 450px;
+    }
+
     @include mq(desktop) {
         width: 358px;
-        
     }
 }
+        
 
 
 .btn-subscribe {
