--- a/css/main.css
+++ b/css/main.css
@@ -455,6 +455,12 @@ img {
   color: var(--accent-color);
 }
 
+@media screen and (min-width: 768px) {
+  .form-place {
+    width: 450px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .form-place {
     width: 358px;
@@ -1071,6 +1077,23 @@ Work section BEM
   text-align: center;
 }
 
+@media screen and (min-width: 768px) {
+  .footer-box {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .footer-box {
     -webkit-box-orient: horizontal;
@@ -1080,6 +1103,12 @@ Work section BEM
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-container {
+    margin-right: 165px;
   }
 }
 
