--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import './components/social-link-group';
 @import './components/subscribe-form';
 @import './components/prtfolio-btn';
+@import './components/mobile-menu';
 
 // layouts
 @import './layouts/header';
