робота з мобільним меню

--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -5,6 +5,7 @@
 .header-container {
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 .logo {
@@ -28,8 +29,18 @@
 .site-nav .logo {
     display: block;
 
-    padding-top: 24px;
-    padding-bottom: 25px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+
+    @include mq(tablet) {
+        padding-top: 26px;
+        padding-bottom: 26px;
+    }
+
+    @include mq(desktop) {
+        padding-top: 24px;
+        padding-bottom: 25px;
+    }
 }
 
 .site-nav.list {
@@ -37,6 +48,10 @@
 
     padding: 0;
     margin: 0;
+
+    @include mq(mobile-only) {
+        display: none;
+    }
 }
 
 
@@ -95,6 +110,11 @@
 .site-nav {
     display: flex;
     align-items: center;
+
+    @include mq(mobile-only) {
+        width: 100%;
+        justify-content: space-between;
+    }
 }
 
 .contact {
@@ -104,6 +124,10 @@
     padding: 0;
     margin: 0;
     margin-left: auto;
+
+    @include mq(mobile-only) {
+        display: none;
+    }
 }
 
 .contact .contact-item {
