--- a/css/main.css
+++ b/css/main.css
@@ -536,13 +536,41 @@ img {
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.mobile-menu-btn {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu-btn {
+    display: none;
+  }
+}
+
+.mobile-menu-btn .icon-cross {
+  display: none;
+}
+
+.mobile-menu-btn.is-open .icon-cross {
+  display: block;
+}
+
+.mobile-menu-btn.is-open .icon-menu {
+  display: none;
+}
+
 .mobile-menu {
-  position: fixed;
-  top: 0;
+  position: absolute;
+  top: 100%;
   left: 0;
   width: 100%;
-  height: 100%;
-  padding: 40px;
+  height: 713px;
+  padding: 48px 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -550,8 +578,6 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
   background-color: #fff;
 }
 
@@ -561,8 +587,87 @@ img {
   }
 }
 
+.mobile-menu__nav {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.mobile-menu__link {
+  text-decoration: none;
+  font-style: var(-primary-font-family);
+  font-weight: var(--medium-font-weight);
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+}
+
+.mobile-menu__link:focus,
+.mobile-menu__link:hover {
+  color: var(--accent-color);
+}
+
+.mobile-menu__item {
+  margin-bottom: 32px;
+}
+
 .mobile-menu__contatcts {
+  padding: 0;
+  margin: 0;
   margin-top: auto;
+  list-style: none;
+  margin-bottom: 64px;
+}
+
+.contatcts__link {
+  text-decoration: none;
+}
+
+.telefon {
+  font-style: var(-primary-font-family);
+  font-weight: var(--medium-font-weight);
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+.e-mail {
+  font-style: var(-primary-font-family);
+  font-weight: var(--medium-font-weight);
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+}
+
+.mobile-menu__socials {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.socials__item {
+  margin-right: 10px;
+}
+
+.socials__item:not(:last-child) {
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.socials__link {
+  text-decoration: none;
+  font-style: var(-primary-font-family);
+  font-weight: var(--medium-font-weight);
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
 }
 
 .header {
@@ -576,6 +681,7 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
 }
 
 .logo {
@@ -599,14 +705,34 @@ img {
 
 .site-nav .logo {
   display: block;
-  padding-top: 24px;
-  padding-bottom: 25px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav .logo {
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .site-nav .logo {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
 }
 
 .site-nav.list {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+@media screen and (max-width: 767.98px) {
+  .site-nav.list {
+    display: none;
+  }
 }
 
 .site-nav .link {
@@ -658,6 +784,15 @@ img {
           align-items: center;
 }
 
+@media screen and (max-width: 767.98px) {
+  .site-nav {
+    width: 100%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
 .contact {
   list-style: none;
   display: -webkit-box;
@@ -666,6 +801,12 @@ img {
   padding: 0;
   margin: 0;
   margin-left: auto;
+}
+
+@media screen and (max-width: 767.98px) {
+  .contact {
+    display: none;
+  }
 }
 
 .contact .contact-item {
