--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,23 +1,105 @@
 .mobile-menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 40px;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+    //   height: 100%;
+  height: 713px;
+  
+  padding: 48px 40px;
 
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    transform: translateX(100%);
+    
+  background-color: #fff;
 
-    background-color: #fff;
+  @include mq(tablet) {
+    display: none;
+  }
+}
 
-    @include mq(tablet) {
-        display: none;
-    }
+.mobile-menu__nav {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    
+}
+.mobile-menu__link {
+    text-decoration: none;
+    
+    font-style: var(-primary-font-family);
+    font-weight: var(--medium-font-weight);
+    font-size: 40px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    color: var(--title-text-color);
+}
+
+.mobile-menu__link:focus,
+.mobile-menu__link:hover {
+    color: var(--accent-color);
+}
+
+.mobile-menu__item {
+    margin-bottom: 32px;
 }
 
 .mobile-menu__contatcts {
+    padding: 0;
+    margin: 0;
     margin-top: auto;
+    list-style: none;
+    margin-bottom: 64px;
+}
+.contatcts__link {
+    text-decoration: none;
+}
+
+.telefon {
+    font-style: var(-primary-font-family);
+    font-weight: var(--medium-font-weight);
+    font-size: 34px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    color: var(--accent-color);
+
+}
+.e-mail {
+    font-style: var(-primary-font-family);
+    font-weight: var(--medium-font-weight);
+    font-size: 24px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
+}
+
+.mobile-menu__socials {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+}
+
+.socials__item {
+    margin-right: 10px;
+
+    &:not(:last-child) {
+        padding-right: 10px;
+        border-right: 1px solid rgba(33, 33, 33, 0.2);
+
+    }
+
+}
+
+.socials__link {
+    text-decoration: none;
+    font-style: var(-primary-font-family);
+    font-weight: var(--medium-font-weight);
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: var(--accent-color);
+
+    
 }
