--- a/sass/components/_mobile-menu-btn.scss
+++ b/sass/components/_mobile-menu-btn.scss
@@ -5,6 +5,11 @@
     border: none;
     background-color: transparent;
 
+    &:focus,
+    &:hover {
+        fill: var(--accent-color);
+    }
+
     @include mq(tablet) {
         display: none;
     }
