--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,22 +1,27 @@
 .mobile-menu {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-    //   height: 100%;
-  height: 713px;
-  
-  padding: 48px 40px;
-
-  display: flex;
-  flex-direction: column;
-
-    
-  background-color: #fff;
-
-  @include mq(tablet) {
     display: none;
-  }
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    // height: 100%;
+    height: 730px;
+  
+    padding: 48px 40px;
+
+    z-index: 2;
+    
+    background-color: #fff;
+
+    &.is-open {
+      display: flex;
+      
+      @include mq(tablet) {
+        display: none;
+      }
+    }
+
 }
 
 .mobile-menu__nav {
@@ -34,6 +39,10 @@
     line-height: 1.18;
     letter-spacing: 0.02em;
     color: var(--title-text-color);
+
+    &.current {
+        color: var(--accent-color);
+    }
 }
 
 .mobile-menu__link:focus,
@@ -46,10 +55,10 @@
 }
 
 .mobile-menu__contatcts {
-    padding: 0;
-    margin: 0;
-    margin-top: auto;
     list-style: none;
+    padding: 0;
+    // margin: 0;
+    margin-top: auto;
     margin-bottom: 64px;
 }
 .contatcts__link {
