закінчив адаптацію модалки

--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -4,10 +4,14 @@
 
     font-size: 20px;
     font-style: normal;
-    line-height: 1.1;
+    line-height: 1.5;
     color: var(--title-text-color);
 
     margin-bottom: 12px;
+
+    @include mq(desktop) {
+        line-height: 1.1;
+    }
 
 }
 
@@ -101,7 +105,8 @@
 
     font-style: normal;
     font-weight: var(--regular-font-weight);
-    line-height: 1.7;
+    font-size: 12px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
 
     align-items: center;
@@ -110,6 +115,11 @@
     flex-direction: row;
 
     margin-bottom: 30px;
+
+    @include mq(desktop) {
+        font-size: 14px;
+        line-height: 1.7;
+    }
 }
 
 
