--- a/css/main.css
+++ b/css/main.css
@@ -177,7 +177,7 @@ img {
   top: 50%;
   left: 50%;
   opacity: 1;
-  width: 528px;
+  width: 450px;
   background-color: #fff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -189,6 +189,12 @@ img {
   transition: opacity var(--transition) 200ms, -webkit-transform var(--transition) 200ms;
   transition: transform var(--transition) 200ms, opacity var(--transition) 200ms;
   transition: transform var(--transition) 200ms, opacity var(--transition) 200ms, -webkit-transform var(--transition) 200ms;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-wrapper {
+    width: 528px;
+  }
 }
 
 .modal-btn {
@@ -224,9 +230,15 @@ img {
   text-align: center;
   font-size: 20px;
   font-style: normal;
-  line-height: 1.1;
+  line-height: 1.5;
   color: var(--title-text-color);
   margin-bottom: 12px;
+}
+
+@media screen and (min-width: 1200px) {
+  .form-title {
+    line-height: 1.1;
+  }
 }
 
 .form-item {
@@ -306,7 +318,8 @@ img {
 .policy-list {
   font-style: normal;
   font-weight: var(--regular-font-weight);
-  line-height: 1.7;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -319,6 +332,13 @@ img {
       -ms-flex-direction: row;
           flex-direction: row;
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .policy-list {
+    font-size: 14px;
+    line-height: 1.7;
+  }
 }
 
 .custom-checkbox {
