--- a/css/main.css
+++ b/css/main.css
@@ -525,10 +525,17 @@ img {
 
 .filter-item {
   margin-right: 8px;
+  margin-bottom: 15px;
 }
 
 .filter-item:last-child {
   margin-right: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .filter-item {
+    margin-bottom: 0;
+  }
 }
 
 .btn-portfolio {
@@ -1448,12 +1455,25 @@ Work section BEM
 }
 
 .button-filter {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 50px;
-  /* margin-right: auto;
-  margin-left: auto; */
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  margin-bottom: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .button-filter {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .button-filter {
+    margin-bottom: 50px;
+  }
 }
 
 .portfolio-link {
@@ -1480,10 +1500,29 @@ Work section BEM
       flex-wrap: wrap;
 }
 
+@media screen and (min-width: 768px) {
+  .flex-container {
+    margin: -15px;
+  }
+}
+
 .flex-item {
-  width: 370px;
-  margin-right: 30px;
+  width: 100%;
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .flex-item {
+    width: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .flex-item {
+    width: calc((100% - 3 * 30px) / 3);
+    margin: 15px;
+  }
 }
 
 .portfolio-link {
@@ -1506,14 +1545,6 @@ Work section BEM
   padding: 20px 24px;
 }
 
-.flex-item:nth-child(3n) {
-  margin-right: 0;
-}
-
-.flex-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-
 .overlay {
   position: absolute;
   top: 0;
@@ -1527,8 +1558,8 @@ Work section BEM
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 370px;
-  height: 294px;
+  width: 100%;
+  height: 100%;
   padding-top: 63px;
   padding-left: 24px;
   padding-bottom: 63px;
