--- a/sass/components/_prtfolio-btn.scss
+++ b/sass/components/_prtfolio-btn.scss
@@ -1,8 +1,13 @@
 .filter-item {
     margin-right: 8px;
+    margin-bottom: 15px;
 
     &:last-child {
         margin-right: 0;
+    }
+
+    @include mq(tablet) {
+        margin-bottom: 0;
     }
 }
 
