--- a/sass/layouts/_portfolio-page.scss
+++ b/sass/layouts/_portfolio-page.scss
@@ -1,8 +1,15 @@
 .button-filter {
-    justify-content: center;
-    margin-bottom: 50px;
-    /* margin-right: auto;
-  margin-left: auto; */
+    justify-content: left;
+    margin-bottom: 40px;
+
+    @include mq(tablet) {
+        justify-content: center;
+        margin-bottom: 30px;
+    }
+    
+    @include mq(desktop) {
+        margin-bottom: 50px;
+    }
 }
 
 .portfolio-link {
@@ -25,14 +32,38 @@
 .flex-container {
     display: flex;
     flex-wrap: wrap;
+
+    @include mq(tablet) {
+        margin: -15px;
+    }
+
 }
 
 .flex-item {
 
-    width: 370px;
-
-    margin-right: 30px;
+    width: 100%;
     margin-bottom: 30px;
+
+    @include mq(tablet) {
+        width: calc((100% - 2 * 30px) / 2);
+        margin: 15px;
+    }
+
+    @include mq(desktop) {
+        width: calc((100% - 3 * 30px) / 3);
+        margin: 15px;
+
+        // margin-right: 30px;
+        // margin-bottom: 30px;
+
+        // &:nth-child(3n) {
+        //     margin-right: 0;
+        // }
+        
+        // &:nth-last-child(-n + 3) {
+        //     margin-bottom: 0;
+        // }
+    }
 }
 
 .portfolio-link {
@@ -59,13 +90,7 @@
 
 }
 
-.flex-item:nth-child(3n) {
-    margin-right: 0;
-}
 
-.flex-item:nth-last-child(-n + 3) {
-    margin-bottom: 0;
-}
 
 .overlay {
     position: absolute;
@@ -76,8 +101,8 @@
     align-items: center;
     justify-content: center;
 
-    width: 370px;
-    height: 294px;
+    width: 100%;
+    height: 100%;
 
     padding-top: 63px;
     padding-left: 24px;
