--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -5,15 +5,46 @@
 
     background-color: #c4c4c4;
 
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 118px;
+    padding-bottom: 118px;
 
     align-items: center;
 
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../imeges/hero/background.jpg');
+        url('../imeges/hero/hero_mob.jpg');
+    @include mq(retina) {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                url('../imeges/hero/hero_mob@2x.jpg');
+    }
+    
+    @include mq(tablet) {
+        
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            url('../imeges/hero/hero_tab.jpg');
+
+        @include mq(retina) {
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                url('../imeges/hero/hero_tab@2x.jpg');
+        }
+    }
+
+    @include mq(desktop) {
+        padding-top: 200px;
+        padding-bottom: 200px;
+
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                url('../imeges/hero/hero_desk.jpg');
+        
+        @include mq(retina) {
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                url('../imeges/hero/hero_desk@2x.jpg');
+        }
+    }
+
     background-repeat: no-repeat;
     background-position: center;
+
+    background-size: cover;
 }
 
 .hero-title {
