--- a/css/main.css
+++ b/css/main.css
@@ -585,44 +585,44 @@ img {
   }
 }
 
-.mobile-menu-btn .icon-cross {
-  display: none;
-}
-
-.mobile-menu-btn.is-open .icon-cross {
-  display: block;
-}
-
-.mobile-menu-btn.is-open .icon-menu {
-  display: none;
-}
-
 .mobile-menu {
-  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  position: absolute;
-  top: 100%;
+  position: fixed;
+  top: 0;
   left: 0;
   width: 100%;
-  height: 730px;
+  height: 100%;
   padding: 48px 40px;
   z-index: 2;
   background-color: #fff;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform var(--transition);
+  transition: -webkit-transform var(--transition);
+  transition: transform var(--transition);
+  transition: transform var(--transition), -webkit-transform var(--transition);
 }
 
 .mobile-menu.is-open {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 @media screen and (min-width: 768px) {
   .mobile-menu.is-open {
     display: none;
   }
+}
+
+.mobile-menu .mobile-menu-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: 10px;
+  margin-right: 15px;
 }
 
 .mobile-menu__nav {
@@ -657,7 +657,7 @@ img {
 .mobile-menu__contatcts {
   list-style: none;
   padding: 0;
-  margin-top: auto;
+  margin-top: 302px;
   margin-bottom: 64px;
 }
 
