--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,12 +1,13 @@
 .mobile-menu {
-    display: none;
     flex-direction: column;
-    position: absolute;
-    top: 100%;
+    
+
+    position: fixed;
+    top: 0;
     left: 0;
     width: 100%;
-    // height: 100%;
-    height: 730px;
+    height: 100%;
+    
   
     padding: 48px 40px;
 
@@ -14,15 +15,30 @@
     
     background-color: #fff;
 
+    transform: translateX(100%);
+
+    transition: transform var(--transition);
+
     &.is-open {
-      display: flex;
+        transform: translateX(0);
       
       @include mq(tablet) {
         display: none;
       }
     }
 
+    & .mobile-menu-btn {
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin-top: 10px;
+        margin-right: 15px;
+
+    }
+
 }
+
+
 
 .mobile-menu__nav {
     list-style: none;
@@ -57,8 +73,8 @@
 .mobile-menu__contatcts {
     list-style: none;
     padding: 0;
-    // margin: 0;
-    margin-top: auto;
+    
+    margin-top: 302px;
     margin-bottom: 64px;
 }
 .contatcts__link {
