--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -96,7 +96,7 @@
 
     &::after {
         position: absolute;
-        bottom: -1px;
+        bottom: -3px;
         left: 0;
     
     
@@ -106,6 +106,10 @@
         height: 4px;
         background-color: var(--accent-color);
         border-radius: 2px;
+
+        @include mq(desktop) {
+        bottom: -6px;
+        }
     
     }
 }
