--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,4 +1,5 @@
 .mobile-menu {
+    display: flex;
     flex-direction: column;
     
 
@@ -74,7 +75,7 @@
     list-style: none;
     padding: 0;
     
-    margin-top: 302px;
+    margin-top: auto;
     margin-bottom: 64px;
 }
 .contatcts__link {
@@ -104,6 +105,11 @@
     margin: 0;
     list-style: none;
     display: flex;
+    flex-wrap: wrap;
+
+    @include mq(mobile) {
+        flex-wrap: nowrap;
+    }
 }
 
 .socials__item {
