--- a/sass/layouts/_portfolio-page.scss
+++ b/sass/layouts/_portfolio-page.scss
@@ -20,6 +20,7 @@
 .title.project-name {
     font-size: 18px;
     line-height: 2;
+    letter-spacing: 0.06em;
 
     margin-bottom: 4px;
 }
@@ -80,6 +81,10 @@
     }
 }
 
+.portfolio-img {
+    max-width: 100%;
+}
+
 
 .text-box {
     border-right: 1px solid #eeeeee;
@@ -137,4 +142,5 @@
     position: relative;
 
     overflow: hidden;
+
 }
