--- a/css/main.css
+++ b/css/main.css
@@ -235,11 +235,17 @@ img {
 .form-title {
   display: block;
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
   font-style: normal;
   line-height: 1.5;
   color: var(--title-text-color);
   margin-bottom: 12px;
+}
+
+@media screen and (min-width: 480px) {
+  .form-title {
+    font-style: 20px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -302,7 +308,7 @@ img {
 .text-area {
   resize: none;
   width: 100%;
-  height: 120px;
+  height: 80px;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.01em;
@@ -312,6 +318,12 @@ img {
   outline: transparent;
   -webkit-transition: border var(--transition);
   transition: border var(--transition);
+}
+
+@media screen and (min-width: 480px) {
+  .text-area {
+    height: 120px;
+  }
 }
 
 .text-area:focus {
@@ -325,7 +337,7 @@ img {
 .policy-list {
   font-style: normal;
   font-weight: var(--regular-font-weight);
-  font-size: 12px;
+  font-size: 9px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   -webkit-box-align: center;
@@ -338,13 +350,30 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
+}
+
+@media screen and (min-width: 480px) {
+  .policy-list {
+    font-size: 12px;
+    margin-bottom: 30px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .policy-list {
     font-size: 14px;
     line-height: 1.7;
+  }
+}
+
+.policy-list_text {
+  margin-left: 10px;
+}
+
+@media screen and (min-width: 480px) {
+  .policy-list_text {
+    margin-left: 0;
   }
 }
 
@@ -678,10 +707,16 @@ img {
 .telefon {
   font-style: var(-primary-font-family);
   font-weight: var(--medium-font-weight);
-  font-size: 34px;
+  font-size: 27px;
   line-height: 1.18;
   letter-spacing: 0.02em;
   color: var(--accent-color);
+}
+
+@media screen and (min-width: 480px) {
+  .telefon {
+    font-size: 34px;
+  }
 }
 
 .e-mail {
@@ -724,10 +759,16 @@ img {
   text-decoration: none;
   font-style: var(-primary-font-family);
   font-weight: var(--medium-font-weight);
-  font-size: 18px;
+  font-size: 10px;
   line-height: 1.22;
   letter-spacing: 0.02em;
   color: var(--accent-color);
+}
+
+@media screen and (min-width: 480px) {
+  .socials__link {
+    font-size: 18px;
+  }
 }
 
 .header {
@@ -1437,6 +1478,13 @@ Work section BEM
   margin-bottom: 20px;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .footer-container .logo {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .footer-nav {
   color: var(--white-text);
   font-style: normal;
@@ -1669,10 +1717,16 @@ Work section BEM
   font-family: var(--primary-font-family);
   font-style: normal;
   font-weight: var(--regular-font-weight);
-  font-size: 18px;
+  font-size: 15px;
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: var(--white-text);
+}
+
+@media screen and (min-width: 480px) {
+  .overlay-text {
+    font-size: 15px;
+  }
 }
 
 .product {
