--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -85,10 +85,14 @@
 .telefon {
     font-style: var(-primary-font-family);
     font-weight: var(--medium-font-weight);
-    font-size: 34px;
+    font-size: 27px;
     line-height: 1.18;
     letter-spacing: 0.02em;
     color: var(--accent-color);
+
+    @include mq(mobile) {
+        font-size: 34px;
+    }
 
 }
 .e-mail {
@@ -127,10 +131,12 @@
     text-decoration: none;
     font-style: var(-primary-font-family);
     font-weight: var(--medium-font-weight);
-    font-size: 18px;
+    font-size: 10px;
     line-height: 1.22;
     letter-spacing: 0.02em;
     color: var(--accent-color);
 
-    
+    @include mq(mobile) {
+        font-size: 18px;
+    }
 }
