--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -2,12 +2,16 @@
     display: block;
     text-align: center;
 
-    font-size: 20px;
+    font-size: 18px;
     font-style: normal;
     line-height: 1.5;
     color: var(--title-text-color);
 
     margin-bottom: 12px;
+
+    @include mq(mobile) {
+        font-style: 20px;
+    }
 
     @include mq(desktop) {
         line-height: 1.1;
@@ -75,7 +79,7 @@
 .text-area {
     resize: none;
     width: 100%;
-    height: 120px;
+    height: 80px;
 
     font-size: 14px;
     line-height: 1.14;
@@ -89,6 +93,10 @@
     outline: transparent;
 
     transition: border var(--transition);
+
+    @include mq(mobile) {
+    height: 120px;
+    }
 
 
     &:focus {
@@ -105,7 +113,7 @@
 
     font-style: normal;
     font-weight: var(--regular-font-weight);
-    font-size: 12px;
+    font-size: 9px;
     line-height: 1.17;
     letter-spacing: 0.03em;
 
@@ -114,7 +122,12 @@
 
     flex-direction: row;
 
-    margin-bottom: 30px;
+    margin-bottom: 10px;
+
+    @include mq(mobile) {
+        font-size: 12px;
+        margin-bottom: 30px;
+    }
 
     @include mq(desktop) {
         font-size: 14px;
@@ -122,6 +135,12 @@
     }
 }
 
+.policy-list_text {
+    margin-left: 10px;
 
+    @include mq(mobile) {
+        margin-left: 0;
+    }
+}
 
 
