--- a/css/main.css
+++ b/css/main.css
@@ -697,7 +697,13 @@ img {
   list-style: none;
   padding: 0;
   margin-top: auto;
-  margin-bottom: 64px;
+  margin-bottom: 24px;
+}
+
+@media screen and (min-width: 480px) {
+  .mobile-menu__contatcts {
+    margin-bottom: 64px;
+  }
 }
 
 .contatcts__link {
@@ -1677,6 +1683,12 @@ Work section BEM
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   padding: 20px 24px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .first-project {
+    padding-bottom: 56px;
+  }
 }
 
 .overlay {
