--- a/css/main.css
+++ b/css/main.css
@@ -1662,7 +1662,14 @@ Work section BEM
 }
 
 .portfolio-link {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
   -webkit-transition: -webkit-box-shadow var(--transition);
   transition: -webkit-box-shadow var(--transition);
   transition: box-shadow var(--transition);
@@ -1683,12 +1690,9 @@ Work section BEM
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   padding: 20px 24px;
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
-  .first-project {
-    padding-bottom: 56px;
-  }
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .overlay {
